--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">TipsCalculator-CodeLab</string>
+    <string name="amount_hint">Enter amount</string>
 </resources>
