Showing total amount

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">TipsCalculator-CodeLab</string>
     <string name="amount_hint">Enter amount</string>
+    <string name="total_title">Total</string>
 </resources>
